# Retail-Copilot-Agent

./: README.md  pyproject.toml  query.py  requirements.txt  run_agent_hybrid.py  test_agent.py
agent/: compiled_sql_gen.json  dspy_signatures.py  graph_hybrid.py  optimize_sql.py
agent/rag/: retrieval.py
agent/tools/: sqlite_tool.py
docs/: catalog.md  kpi_definitions.md  marketing_calendar.md  product_policy.md
